# advent-of-code

./: .gitignore  README.md  advent-of-code.code-workspace  pyproject.toml
advent_of_code/2022/: dec_01.py  dec_02.py  dec_02_1.py  dec_02_2.py  dec_03.py  dec_04.py  dec_05.py  dec_05_1.py  dec_05_2.py  dec_06.py  dec_07.py  dec_08.py  dec_08_1.py  dec_08_2.py  dec_09.py  dec_10.py  dec_11.py  dec_12.py  dec_13.py  dec_14.py  dec_15.py
advent_of_code/2022/dec_01/: solution.py
advent_of_code/2022/dec_02/: part_1.py  part_2.py
advent_of_code/2022/dec_03/: solution.py
advent_of_code/2022/dec_04/: solution.py
advent_of_code/2022/dec_05/: part_1.py  part_2.py
advent_of_code/2022/dec_07/: solution.py
advent_of_code/2022/dec_08/: part_1.py  part_2.py
advent_of_code/2022/dec_09/: solution.py
advent_of_code/2022/dec_10/: solution.py
advent_of_code/2022/dec_11/: solution.py
advent_of_code/2022/dec_12/: solution.py
advent_of_code/2022/dec_12/failed_attempts/: multi_hiker.py  single_hiker.py
advent_of_code/2022/dec_13/: solution.py  solution_with_debug_info.py
advent_of_code/2022/dec_14/: solution.py
advent_of_code/2022/dec_15/: part_1.py
advent_of_code/2022/dec_16/: part_1.py  part_2.py  visual.py
advent_of_code/2023/: dec_01.py  dec_02.py  dec_03.py  dec_04.py  dec_05.py  dec_06.py  dec_07.py  dec_08.py  dec_09.py  dec_10.py  dec_15.py
advent_of_code/2024/: dec_01.py  dec_02.py  dec_03.py  dec_04.py  dec_05.py  dec_06.py  dec_07.py  dec_08.py  dec_09.py  dec_10.py  dec_11.py  dec_12.py  dec_13.py  dec_14.py  dec_15.py  dec_16.py  dec_17.py  dec_18.py  dec_19.py  dec_20.py  dec_21.py  dec_22.py  dec_23.py  dec_24.py  dec_25.py
advent_of_code/2024/rust/src/: main.rs
advent_of_code/shared/: utils.py
tools/: generate_skeleton.py
